--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "ecmaVersion": 2021
     },
     "rules": {
-    // Your custom rules here
+    "no-duplicate-imports": "error",
+    "no-unused-vars": "error"
     }
    }
