--- a/package.json
+++ b/package.json
@@ -6,19 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint —fix",
-      "prettier —write",
-      "git add"
-    ]
+    "start": "node index.js",
+    "eslint": "npx eslint .",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +20,9 @@
     "mongoose": "^8.3.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "eslint": "^9.1.1",
+    "globals": "^15.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5"
   }
