--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
