--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dropbox": "^10.34.0",
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
